# RustyBackup

./: .gitignore  .readme  AGENTS.md  Cargo.toml  README.md
src/: backup.rs  config.rs  journal.rs  lib.rs  main.rs  state.rs  utils.rs
tests/: cleanup.rs  cli.rs  config_tests.rs  exclude.rs  journal.rs  serde.rs  state.rs  test_config.toml
