[package]
name = "rustybackup"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
toml = "0.8"
anyhow = "1.0"
walkdir = "2"
globset = "0.4"
indicatif = "0.17.11"

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
] }
usn-journal-rs = "0.3"
